alteração diretorio imagem

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
             
             <div class="Titulo">
                 <center>
-                    <img src="IMG/_Logotipo.png" alt="JAVA" >    
+                    <img src="_Logotipo.png" alt="JAVA" >    
             </div>
 
             <div class="Grupo">
