update do codigo
add link url da logo e correção de nome

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,7 +43,7 @@
             
             <div class="Titulo">
                 <center>
-                    <img src="_Logotipo.png" alt="JAVA" >    
+                    <img src="https://i.ibb.co/7jkxgQN/Logotipo.png" alt="_Logotipo" >    
             </div>
 
             <div class="Grupo">
@@ -54,7 +54,7 @@
                 <p>João Paulo Felgas  -  Matrícula: 202002020156</p>
                 <p>Igor Frazão Ayres  -  Matrícula: 202001452117</p>
                 <p>Rayane Martins  -  Matrícula: 201803416203</p>
-                <p>Patrik Ferreira de Almeida  -   Matrícula: 202002214619</p>
+                <p>Patrick Ferreira de Almeida  -   Matrícula: 202002214619</p>
             </div>
             
             <hr>
